feat(stats): add stats endpoints
